(test passed) dynamoDb 스키마 변경.